# toy-kernel

./: .gitignore  CMakeLists.txt  README.MD  cross_build.ini  main.c  meson.build  shell.nix
arch/: meson.build
arch/i686/: CMakeLists.txt  a20.h  a20.s  boot.s  gdt.c  gdt.h  helpers.h  idt.c  idt.h  interrupt.s  interrupt_frame.h  interrupt_handlers.c  interrupt_handlers.h  isr.c  isr.h  meson.build  pic.c  pic.h
cmake/: i686-elf.cmake
drivers/: CMakeLists.txt  i8042.c  i8042.h  meson.build  pit.c  pit.h  serial.c  serial.h  tty.c  tty.h  vga_fb.c
scripts/: grub.cfg  make_iso.sh
services/: CMakeLists.txt  interrupt.c  interrupt.h  log.c  log.h  meson.build  timer.c  timer.h
utils/: create_gdt.c  generate_interrupt_handlers.py
